[package]
name = "cpu-count"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
tokio = { version = "1.39.1", features = ["full"] }
tokio-macros = "1.0.0"
